# kivyx2

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  reference.doctree
docs/_sources/: reference.rst.txt
examples/: flutter_style_draggable.py  multi_tap_button_playground.py  multi_tap_gesture_recognition.py  scrollview_playground.py  scrollview_scroll_by_distance.py  scrollview_scroll_to_widget.py  shopping.py  swipe_to_delete.py  switch_playground.py  tier_list_maker.py
examples/draggable/: cancelling_ongoing_drags.py  customizing_animation.py  customizing_animation_ver2.py  draggable_can_work_with_scrollview.py  nested_drag_targets.py  reacting_to_entering_and_leaving.py  reorderable_stacklayout.py  shopping.py
manual_tests/: scrollview_playground.py  scrollview_scroll_by_distance.py  scrollview_scroll_to_widget.py  swipe2delete_playground.py  switch_playground.py
manual_tests/draggable/: cancelling_ongoing_drags.py  customizing_animations.py  nested_drag_target.py  reacting_to_entering_and_leaving.py  reorderable_stacklayout.py  using_other_widget_as_an_emitter.py  working_with_scrollview.py
sphinx/: conf.py  index.rst  reference.rst
src/kivyx/: __init__.py  touch_filters.py
src/kivyx/effects/: dampedscroll.py  no.py  scroll.py
src/kivyx/uix/: button.py  scrollview.py  switch.py
src/kivyx/uix/behaviors/: draggable.py  swipe2delete.py  tap.py  touchripple.py
tests/: conftest.py  test_uix_scrollview.py
tests/_etc/: README.txt  test_ListProperty.py
