[tool.poetry]
name = "kivyx"
version = "0.1.0.dev0"
description = "A Kivy UI library that maximizes the use of asynckivy"
authors = ["Nattōsai Mitō <flow4re2c@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/gottadiveintopython/kivyx2'
homepage = 'https://github.com/gottadiveintopython/kivyx2'
keywords = ['async', 'kivy']
classifiers=[
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Software Development :: Libraries',
    'Operating System :: OS Independent',
]
packages = [
    { include = "kivyx", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
asyncgui = ">=0.7.2,<0.9"
asynckivy = "~0.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.1"
flake8 = "^6.0.0"
kivy = "~2.3"

[tool.poetry.group.doc.dependencies]
sphinx = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
xfail_strict = true
addopts = "--maxfail=4 --strict-markers"
