[project]
name = "kivyx"
version = "0.1.0.dev0"
description = "A new set of Kivy widgets that aims for better touch experience"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Nattosai Mito", email = "flow4re2c@gmail.com" }
]
keywords = ["kivy"]
classifiers=[
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "asynckivy>=0.9.1",
    "kivy==2.3.1",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
